// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClaimCard component matches the snapshot of a two line claim 1`] = `
<Component
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "flexDirection": "row",
        "marginBottom": "1%",
        "paddingVertical": "5%",
      },
      Object {},
    ]
  }
>
  <Component
    alignItems="center"
    flex={0.2}
  />
  <Component
    flex={0.7}
    onTouchEnd={[Function]}
    overflow="scroll"
  >
    <ClaimCard
      key="givenName"
      primaryText="Test"
      secondaryText="Given Name"
    />
    <ClaimCard
      key="familyName"
      primaryText="Running"
      secondaryText="Family Name"
    />
  </Component>
  <Component
    flex={0.1}
  />
</Component>
`;

exports[`ClaimCard component matches the snapshot on render 1`] = `
<Component
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "flexDirection": "row",
        "marginBottom": "1%",
        "paddingVertical": "5%",
      },
      Object {},
    ]
  }
>
  <Component
    alignItems="center"
    flex={0.2}
  />
  <Component
    flex={0.7}
    onTouchEnd={[Function]}
    overflow="scroll"
  >
    <ClaimCard
      key="familyName"
      primaryText="Running"
      secondaryText="Family Name"
    />
  </Component>
  <Component
    flex={0.1}
  />
</Component>
`;
